# aihuber

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/test/: action.yml
.github/workflows/: release.yml  test.yml
aihuber/: __init__.py  aihuber.py  logger.py  proxy.json  schema.py
aihuber/providers/: abstract_api.py
aihuber/providers/anthropic/: anthropic_api.py
aihuber/providers/cohere/: cohere_api.py
aihuber/providers/hugging_face/: hugging_face_api.py
aihuber/providers/mistralai/: mistralai_api.py
aihuber/providers/openai/: openai_api.py
aihuber/providers/perplexity/: perplexity_api.py
aihuber/providers/togetherai/: togetherai_api.py
aihuber/providers/xai_grok/: grok_api.py
dockerfiles/: aihuber.Dockerfile
examples/mistralai/audio/: mistralai_audio_speech.py
examples/mistralai/chat_completion/: mistralai_async.py  mistralai_async_stream.py  mistralai_async_sync.py  mistralai_sync.py  mistralai_sync_stream.py
examples/mistralai/embedding/: mistralai_embeddings.py
scripts/: version.sh
tests/: conftest.py
tests/e2e-tests/chat_completion/: test_anthropic_chat_completion.py  test_cohere_chat_completion.py  test_grok_chat_completion.py  test_hugging_face_chat_completion.py  test_mistralai_chat_completion.py  test_openai_chat_completion.py  test_perplexity_chat_completion.py  test_together_chat_completion.py
tests/e2e-tests/embeddings/: test_mistralai_embeddings.py  test_openai_embeddings.py
tests/unit-tests/: test_aihuber.py  test_logger.py
