[project]
name = "aihuber"
version = "1.0.0"
description = "⚡ Python AI SDK - OpenAI, MistralAI, Anthropic, Google Gemini, XAI Grok, Hugging Face"
authors = [{name = "Sylvain Mouquet", email = "sylvain.mouquet@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-lifespan>=2.1.0",
    "proxycraft>=1.0.3",
    "jinja2>=3.1.6",
    "nest-asyncio>=1.6.0",
]

license = { text = "MIT" }
url = "https://github.com/sylvainmouquet/aihuber"
keywords = [
    "llm",
    "python"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://github.com/sylvainmouquet/aihuber"
documentation = "https://github.com/sylvainmouquet/aihuber"
repository = "https://github.com/sylvainmouquet/aihuber"
changelog = "https://github.com/sylvainmouquet/aihuber/releases"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "certifi>=2026.1.4",
    "httpx>=0.28.1",
    "pip>=24.2",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
    "dotenv>=0.9.9",
]

[tool.uv.sources]
aihuber = { path = "aihuber" }

[project.entry-points.pytest11]
aihuber = "aihuber"
